@@ -906,18 +906,16 @@ if the <i>org.whatever.Myclass</i> is found in Ant's classpath.</p>
 <hr>
 <h2><a name="chmod">Chmod</a></h2>
 <h3>Description</h3>
-<p>Changes the permissions of a file or all files inside a specified directory. Right now it has efect only under Unix.
+<p>Changes the permissions of a file or all files inside specified directories. Right now it has efect only under Unix.
 The permissions are also UNIX style, like the argument for the chmod command.</p>
-<p>It is possible to refine the set of files whose permissions are changed. This can be
-done with the <i>includes</i>, <i>includesfile</i>, <i>excludes</i>, <i>excludesfile</i> and <i>defaultexcludes</i>
-attributes. With the <i>includes</i> or <i>includesfile</i> attribute you specify the files you want to
-have included by using patterns. The <i>exclude</i> or <i>excludesfile</i> attribute is used to specify
-the files you want to have excluded. This is also done with patterns. And
-finally with the <i>defaultexcludes</i> attribute, you can specify whether you
-want to use default exclusions or not. See the section on <a
-href="#directorybasedtasks">directory based tasks</a>, on how the
-inclusion/exclusion of files works, and how to write patterns. The patterns are
-relative to the <i>dir</i> directory.</p>
+<p>See the section on <a href="#directorybasedtasks">directory based
+tasks</a>, on how the inclusion/exclusion of files works, and how to
+write patterns.</p>
+<p>This task holds an implicit <a href="#fileset">FileSet</a> and
+supports all of FileSet's attributes and nested elements
+directly. More FileSets can be specified using nested
+<code>&lt;fileset&gt;</code> or <code>&lt;filesetref&gt;</code>
+elements.</p>
 <h3>Parameters</h3>
 <table border="1" cellpadding="2" cellspacing="0">
   <tr>
@@ -929,18 +927,12 @@ relative to the <i>dir</i> directory.</p>
     <td valign="top">file</td>
     <td valign="top">the file or single directory of which the permissions 
       must be changed.</td>
-    <td valign="top" valign="middle" rowspan="2">exactly one of the two</td>
+    <td valign="top" valign="middle" rowspan="2">exactly one of the two or nested <code>&lt;fileset&gt;</code> elements.</td>
   </tr>
   <tr>
     <td valign="top">dir</td>
     <td valign="top">the directory which holds the files whose permissions 
       must be changed.</td>
-  </tr>
-  <tr>
-    <td valign="top">src</td>
-    <td valign="top">the file or single directory of which the permissions 
-      must be changed (<b>deprecated</b>, use <i>file</i> instead).</td>
-    <td valign="top" align="center">No</td>
   </tr>
   <tr>
     <td valign="top">perm</td>
@@ -977,6 +969,12 @@ relative to the <i>dir</i> directory.</p>
       (&quot;yes&quot;/&quot;no&quot;). Default excludes are used when omitted.</td>
     <td valign="top" align="center">No</td>
   </tr>
+  <tr>
+    <td valign="top">parallel</td>
+    <td valign="top">process all specified files using a single
+      <code>chmod</code> command. Defaults to true.</td>
+    <td valign="top" align="center">No</td>
+  </tr>
 </table>
 <h3>Examples</h3>
 <blockquote>
@@ -985,12 +983,28 @@ relative to the <i>dir</i> directory.</p>
 </blockquote>
 <p>makes the &quot;start.sh&quot; file readable and executable for anyone on a
 UNIX system.</p>
+<blockquote>
 <pre>
     &lt;chmod dir=&quot;${dist}/bin&quot; perm=&quot;ugo+rx&quot; includes="**/*.sh" /&gt;
 </pre>
 </blockquote>
 <p>makes all &quot;.sh&quot; files below <code>${dist}/bin</code>
 readable and executable for anyone on a UNIX system.</p>
+<blockquote>
+<pre>
+&lt;chmod perm=&quot;g+w&quot; /&gt;
+  &lt;fileset dir=&quot;shared/sources1&quot; &gt;
+    &lt;exclude name=&quot;**/trial/**&quot; /&gt;
+  &lt;/fileset&gt;
+  &lt;filesetref refid=&quot;other.shared.sources&quot; /&gt;
+&lt;/chmod&gt;
+</pre>
+</blockquote>
+<p>makes all files below <code>shared/sources1</code> (except those
+below any directory named trial) writable for members of the same
+group on a UNIX system. In addition all files belonging to a FileSet
+with <code>ID</code> <code>other.shared.sources</code> get the same
+permissions.</p>
 <hr>
 <h2><a name="copydir">Copydir</a></h2>
 <h3>Description</h3>
